--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,9 +7,24 @@
 
   <ion-content>
     <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
+
+      <div *ngFor="let p of pages" (click)="openPage(p)">
+        <button menuClose ion-item >
+          {{p.title}}
+        </button>
+      </div>
+
+      <div *ngFor="let p of invitedPages" (click)="openPage(p)">
+        <button menuClose ion-item *ngIf="!auth.token">
+          {{p.title}}
+        </button>
+      </div>
+
+
+      <button menuClose ion-item (click)="logOut()" *ngIf="!!auth.token">
+        Cerrar sension
       </button>
+
     </ion-list>
   </ion-content>
 
